# lis2mdl

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: blocking_i2c.rs  calibration.rs  embassy_stm32_i2c.rs  embassy_stm32_spi.rs
src/: lib.rs  lis2mdl.yaml
