[package]
name = "lis2mdl"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Platform-agnostic driver for the LIS2MDL 3-axis digital magnetometer"
repository = "https://github.com/yourusername/lis2mdl"
license = "MIT OR Apache-2.0"
keywords = ["embedded", "magnetometer", "sensor", "lis2mdl", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
device-driver = { version = "1.0.3", default-features = false, features = ["yaml"] }
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
defmt = { version = "0.3", optional = true }

[build-dependencies]
device-driver-generation = "1.0.7"
prettyplease = "0.2"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
embedded-hal-mock = { version = "0.11", features = ["eh1"] }

[features]
default = []
async = ["dep:embedded-hal-async"]
defmt-03 = ["dep:defmt", "device-driver/defmt-03"]
embassy = ["async", "defmt-03"]
